[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osclustering"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Jordao Bragantini", email = "jordao.bragantini@czbiohub.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "scipy",
  "higra",
  "scanpy",
  "gurobipy",
  "cloudpickle",
]

[project.optional-dependencies]
test = [
    "igraph",
    "leidenalg",
    "matplotlib",
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://github.com/royerlab/osclustering#readme"
Issues = "https://github.com/royerlab/osclustering/issues"
Source = "https://github.com/royerlab/osclustering"

[tool.hatch.version]
path = "src/osclustering/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/osclustering tests}"

[tool.coverage.run]
source_pkgs = ["osclustering", "tests"]
branch = true
parallel = true
omit = [
  "src/osclustering/__about__.py",
]

[tool.coverage.paths]
osclustering = ["src/osclustering", "*/osclustering/src/osclustering"]
tests = ["**/_tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
